19-DevOps/4-Kubernetes/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: express-ingress
  labels:
    app.kubernetes.io/name: express-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
             name: express-service
             port: 
              number: 80

    - http:
        paths:
        - pathType: Prefix
          path: "/api/product"
          backend:
            service:
             name: product-service
             port: 
              number: 80
